--- a/web/package.json
+++ b/web/package.json
@@ -40,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.1.6",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
     "eslint": "^6.6.0",
@@ -47,6 +48,7 @@
     "eslint-plugin-import": "2.21.2",
     "eslint-plugin-jsx-a11y": "6.3.0",
     "eslint-plugin-react": "7.20.0",
-    "eslint-plugin-react-hooks": "4"
+    "eslint-plugin-react-hooks": "4",
+    "install": "^0.13.0"
   }
 }
