--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -1,6 +1,6 @@
 {
     "env": {
-        "es2021": true,
+        "es6": true,
         "node": true
     },
     "extends": [
@@ -15,5 +15,8 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "import/no-unresolved": "off",
+        "import/extensions": "never",
+        "camelcase":"off"
     }
 }
