--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/express": "^4.17.8",
     "@types/multer": "^1.4.4",
+    "@types/yup": "^0.29.8",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
     "eslint": "5.16.0",
