--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "lint": "npx eslint **/*.ts --ignore-pattern node_modules/ --fix"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "multer": "^1.4.2",
