--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "axios": "^0.20.0",
     "leaflet": "^1.7.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -24,7 +25,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "npx eslint ./src/pages/** ./src/App.tsx ./src/index.tsx ./src/routes.tsx --fix"
+    "lint": "npx eslint ./src/pages/** ./src/App.tsx ./src/index.tsx ./src/routes.tsx  ./src/utils/** --fix"
   },
   "eslintConfig": {
     "extends": "react-app"
