--- a/mobile/package.json
+++ b/mobile/package.json
@@ -5,7 +5,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "lint": "npx eslint ./src/pages/** ./App.tsx --fix"
   },
   "dependencies": {
     "@expo-google-fonts/nunito": "^0.1.0",
